# Transcribe-AI

./: .env  README.md  cuda_test.py  pyproject.toml  requirements.txt
src/TranscribeAI/: __init__.py  audio_to_text.py  examples.py  main.py  summarization_examples.py  transcribe_base.py  transcribe_factory.py  transcribe_hf.py  transcribe_media.py  transcribe_media_hf.py  transcribe_whisper.py
