[project]
name = "transcribeai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.7.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.6",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "audioread==3.0.1",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "datasets==3.6.0",
    "decorator==5.2.1",
    "dill==0.3.8",
    "filelock==3.18.0",
    "frozenlist==1.6.0",
    "fsspec==2025.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.32.3",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "lazy-loader==0.4",
    "librosa==0.11.0",
    "llvmlite==0.44.0",
    "markupsafe==3.0.2",
    "more-itertools==10.7.0",
    "moviepy==2.2.1",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multidict==6.4.4",
    "multiprocess==0.70.16",
    "networkx==3.5",
    "numba==0.61.2",
    "numpy==2.2.6",
    "ollama==0.5.1",
    "openai-whisper==20240930",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "pip==25.1.1",
    "platformdirs==4.3.8",
    "pooch==1.8.2",
    "proglog==0.1.12",
    "propcache==0.3.1",
    "psutil==7.0.0",
    "pyarrow==20.0.0",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soundfile==0.13.1",
    "soxr==0.5.0.post1",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "torch==2.5.1+cu121",
    "torchaudio==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "tqdm==4.67.1",
    "transformers==4.52.4",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "xxhash==3.5.0",
    "yarl==1.20.0",
]
